<resources>
    <string name="app_name">ScrapIT</string>
    <string name="all_scrap">모든 스크랩</string>
    <string name="favorites">즐겨찾기</string>
    <string name="save_local">로컬저장</string>
    <string name="trash_bin">휴지통</string>
    <string name="root_folder">루트 폴더</string>
    <string name="folder">폴더</string>
    <string name="scrap">스크랩</string>
    <string name="edit">편집</string>
    <string name="add_folder">폴더 추가</string>
    <string name="see_local_save">영구 저장 보기</string>
    <string name="check_all">모두 선택</string>
    <string name="move">이동</string>
    <string name="copy">복사</string>
    <string name="delete">삭제</string>
</resources>